--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@sanity/client": "^7.11.1",
     "@sanity/image-url": "^1.2.0",
     "@supabase/supabase-js": "^2.57.4",
-    "nuxt": "^4.1.1"
+    "nuxt": "^4.1.1",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "vue": "^3.5.21"
