--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
   "dependencies": {
     "@nuxtjs/supabase": "^1.6.2",
     "@nuxtjs/tailwindcss": "^6.14.0",
-    "@sanity/client": "^7.11.1",
-    "@sanity/image-url": "^1.2.0",
     "@supabase/supabase-js": "^2.57.4",
+    "nodemailer": "^7.0.9",
     "nuxt": "^4.1.1",
     "zod": "^4.1.11"
   },
